--- a/assets/css/reference_point.css
+++ b/assets/css/reference_point.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 h2 {
-  color: black;
+  color: red;
   font-family: "Lucida Console", "Courier New", monospace;
   font-size: 12pt;
   font-weight: normal;
