--- a/assets/css/reference_point.css
+++ b/assets/css/reference_point.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-  color:red;
+  color:black;
   font-family: "Ariel", sans-serif;
   font-size: 12pt;
   font-weight: bold;
@@ -32,7 +32,7 @@ h1 {
 }
 
 h2 {
-  color: red;
+  color: black;
   font-family: "Lucida Console", "Courier New", monospace;
   font-size: 12pt;
   font-weight: normal;
